KAAV-1473 translation fixes, zoom buttons visible fix, hide add buttons from side panel

--- a/src/components/ProjectTimeline/VisTimeline.scss
+++ b/src/components/ProjectTimeline/VisTimeline.scss
@@ -13,7 +13,7 @@
     }
     .timeline-menu {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
         padding-left: $size15;
         .time-menu{
@@ -45,6 +45,7 @@
             }
         }
         .zoom-menu{
+            margin-left: 16.5rem;
             button{
                 --min-size: $size32; //hds syntax
                 height: $size32;
