--- a/src/components/projectEdit/ProjectEdit.scss
+++ b/src/components/projectEdit/ProjectEdit.scss
@@ -767,6 +767,9 @@
     button{
       justify-content: flex-start;
     }
+    .add-content{
+      display: none;
+    }
   }
 
   .actions{
